--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sanic-rest"
-version = "1.0.0"
+version = "1.1.0"
 description = "Sanic Rest Framework with Google Cloud Datastore"
 authors = ["Joao Daher <joao@daher.dev>"]
 repository = "https://github.com/flamingo-run/sanic-rest"
@@ -15,7 +15,14 @@ packages = [
 python = ">=3.8,<3.10"
 sanic = "*"
 sanic-openapi = "*"
-gcp-pilot = { version = "*", extras = ["datastore"]}
+gcp-pilot = { version = "*", extras = ["datastore", "storage"]}
+sanic-jwt = { version = "*", optional = true }
+passlib = { version = "*", optional = true }
+argon2_cffi = { version = "*", optional = true }
+
+
+[tool.poetry.extras]
+auth = ["sanic-jwt", "passlib", "argon2_cffi"]
 
 
 [tool.poetry.dev-dependencies]
