--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,18 +8,14 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v1
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: '3.10.x'
       - name: Setup Environment
         run: |
           make setup
-        env:
-          PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-      - name: Build & Release package
+      - name: Build & Publish package
         run: |
           make publish
-        env:
-          PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
