--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,3 +19,5 @@ jobs:
       - name: Build & Publish package
         run: |
           make publish
+        env:
+          PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
