--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,18 +12,16 @@ jobs:
   linter:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+      with:
+        ref: staging
+    - name: Install poetry
+      run: pipx install poetry
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.10.x'
-
-    - name: Cache dependencies
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/pypoetry
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-
+        python-version: '3.12.x'
+        cache: poetry
     - name: Install Python dependencies
       run: |
         make dependencies
@@ -34,18 +32,16 @@ jobs:
   setup:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        with:
+          ref: staging
+      - name: Install poetry
+        run: pipx install poetry
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10.x'
-
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pypoetry
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-
+          python-version: '3.12.x'
+          cache: poetry
       - name: Install Python dependencies
         run: |
           make dependencies
@@ -56,18 +52,16 @@ jobs:
   security:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        with:
+          ref: staging
+      - name: Install poetry
+        run: pipx install poetry
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10.x'
-
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pypoetry
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-
+          python-version: '3.12.x'
+          cache: poetry
       - name: Install Python dependencies
         run: |
           make dependencies
@@ -77,20 +71,17 @@ jobs:
 
   unit:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        with:
+          ref: staging
+      - name: Install poetry
+        run: pipx install poetry
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10.x'
-
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pypoetry
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-
+          python-version: '3.12.x'
+          cache: poetry
       - name: Install Python dependencies
         run: |
           make dependencies
